--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,17 @@
 }
 body {
     width: 100%;
-    height: 150vh;
+    height: 100%;
     background-color: #1D1D1D;
     background: linear-gradient(135deg, #2D2D2D 0%, #1A1A1A 100%);
-
 }
+body:after {
+    content: "";
+    display: table;
+    height: 1px;
+    width: 1px;
+}
+
 .header {
     max-width: 1055px;
     padding-left: 1rem;
@@ -19,16 +25,17 @@ body {
     justify-content: space-between;
     padding-top: 4rem;
     padding-bottom: .5rem;
-    z-index: 10;
+    z-index: 1;
 }
 @media (max-width: 640px) {
     .header {
-        display: none; }
+        display: none;
+    }
 }
 
-.section {
+.error-404 {
     position: absolute;
-    top: 25%;
+    top: 18%;
     left: 30%;
     width: 40%;
     height: 100%;
@@ -38,12 +45,12 @@ body {
     background-size: contain;
 }
 @media (max-width: 640px) {
-    .section {
+    .error-404 {
         left: 25%;
         width: 50%;
     }
 }
-.section__error {
+.error-404__error {
     margin: 10%;
     font-size: 24px;
     letter-spacing: 10.5px;
@@ -53,17 +60,17 @@ body {
     text-align: center;
 }
 @media (max-width: 1000px) {
-    .section__error {
+    .error-404__error {
         font-size: 20px;
     }
 }
 @media (max-width: 700px) {
-    .section__error {
+    .error-404__error {
         font-size: 16px;
         margin: 5%;
     }
 }
-.section__404 {
+.error-404__title {
     font-family: MontserratBlack, sans-serif;
     font-size: 128px;
     letter-spacing: 20px;
@@ -72,24 +79,24 @@ body {
     text-align: center;
 }
 @media (max-width: 1000px) {
-    .section__404 {
+    .error-404__title {
         font-size: 100px;
     }
 }
 @media (max-width: 800px) {
-    .section__404 {
+    .error-404__title {
         font-size: 90px;
         letter-spacing: 10px;
     }
 }@media (max-width: 700px) {
-    .section__404 {
+    .error-404__title {
         font-size: 70px;
         letter-spacing: normal;
         padding: 0;
         margin: 5%;
     }
 }
-.section__text {
+.error-404__text {
     display: block;
     font-family: MontserratBold, sans-serif;
     font-size: 24px;
@@ -98,40 +105,25 @@ body {
     margin-bottom: 3.5%;
 }
 @media (max-width: 1000px) {
-    .section__text {
+    .error-404__text {
         font-size: 20px;
     }
 }
 @media (max-width: 800px) {
-    .section__text {
+    .error-404__text {
         font-size: 18px;
     }
 }
 @media (max-width: 700px) {
-    .section__text {
+    .error-404__text {
         font-size: 14px;
         margin-top: 0;
         line-height: 22px;
     }
 }
-.section__text-small {
-    font-family: MontserratMedium, sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    margin-bottom: 10%;
-}
-@media (max-width: 1000px) {
-    .section__text-small {
-        font-size: 14px;
-    }
-}
-@media (max-width: 700px) {
-    .section__text-small {
-        font-size: 12px;
-        line-height: 18px;
-    }
-}
-.section__btn {
+.button_red_big {
+    display: block;
+    text-align: center;
     height: 60px;
     width: 120px;
     background: radial-gradient(circle, #CC1113 0%, #A30201 100%);
@@ -140,23 +132,26 @@ body {
     outline: none;
     font-family: MontserratBold, sans-serif;
     color: #FFFFFF;
+    line-height: 60px;
     font-size: 16px;
 }
 @media (max-width: 1000px) {
-    .section__btn {
+    .button_red_big {
         height: 50px;
         width: 100px;
         font-size: 14px;
+        line-height: 50px;
     }
 }
 @media (max-width: 700px) {
-    .section__btn {
+    .button_red_big {
         height: 35px;
-        width: 70px;
+        width: 80px;
         font-size: 12px;
+        line-height: 35px;
     }
 }
-.section__btn:hover {
+.button_red_big:hover {
     background: #A30201;
 }
 
@@ -171,7 +166,8 @@ a {
 }
 @media (max-width: 640px) {
     .nav {
-        display: none; }
+        display: none;
+    }
 }
 
 .nav__link {
@@ -191,6 +187,9 @@ a {
     display: flex;
     align-items: center;
     font-family: "MontserratMedium", sans-serif;
+}
+.dropdown__btn:hover {
+    cursor: pointer;
 }
 .dropdown__btn {
     display: flex;
@@ -232,6 +231,7 @@ a {
     right: 0;
     top: calc(100% + .3em);
     color: #FFFFFF;
+    background-color: #222222;
 }
 .dropdown__list-item:not(:last-of-type) {
     margin-bottom: .5em;
@@ -242,7 +242,41 @@ a {
 #chevron {
     fill:#FFFFFF;
 }
-
+.footer {
+    margin-top: 25%;
+    color: #FFFFFF;
+    text-align: center;
+}
+@media (max-width: 1000px) {
+    .footer {
+        margin-top: 18%;
+    }
+}
+.copyright {
+    display: block;
+    font-size: 1rem;
+    opacity: .5;
+    font-family: MontserratMedium, sans-serif;
+}
+@media (max-width: 1000px) {
+    .copyright {
+        font-size: .8rem;
+    }
+}
+.copyright_bold {
+    font-weight: bold;
+}
+.footer .copyright {
+    opacity: 1;
+}
+@media (max-width: 640px) {
+    .footer {
+        align-items: center !important;
+    }
+    .footer .copyright{
+        margin-right: 0 !important;
+    }
+}
 
 /*----------------*/
 @font-face {
